--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mercadopago": "^1.5.14"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
