--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mercadopago": "^1.5.14"
+    "mercadopago": "^1.5.14",
+    "mongoose": "^6.8.3"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
